# sdl-renderer

./: CMakeLists.txt  README.md  TODO
assets/shaders/: .directory  DiffLightNoColVert.glsl  DiffLightVert.glsl  NoLightNoColVert.glsl  NoLightVert.glsl  PassthroughFrag.glsl  PassthroughVert.glsl
src/: .directory  AssimpLoader.cpp  AssimpLoader.hpp  Camera.cpp  Camera.hpp  InputHandler.cpp  InputHandler.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  RenderableObject.cpp  RenderableObject.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  main.cpp
src/standardobjects/: InputHandlers.hpp  Materials.hpp  Meshes.hpp  RenderableObjects.hpp
